2003-09-27  Adrian Aichner  <adrian@xemacs.org>

	* automated/test-harness.el: Syntax emergency fix.

2003-09-27  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el: Give the maintainers what they want.

2003-09-26  Adrian Aichner  <adrian@xemacs.org>

	* automated/test-harness.el (test-harness-from-buffer): Revert
	logging results when running noninteractive per Stephen
	J. Turnbull's veto.

2003-09-26  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.16 "celeriac" is released.

2003-09-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (multiple-match): Test \{m,n\}.

2003-09-03  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.15 "celery" is released.

2003-08-31  Adrian Aichner  <adrian@xemacs.org>

	* automated/test-harness.el (test-harness-from-buffer): Log
	results when running noninteractive.
	* automated/test-harness.el (batch-test-emacs): Remove misplaced
	debugging code.

2003-08-19  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>
	    Markus Kaltenbach  <makalten@informatik.uni-tuebingen.de>

	* automated/weak-tests.el: Added tests for weak-lists.

2003-08-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Update copyright notice and
	maintainer name.  Improve comment on stale match tests.

2003-06-01  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.14 "cassava" is released.

2003-05-10  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.13 "cauliflower" is released.

2003-05-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (replace-match): Revert test to Assert
	that registers are preserved on a failed match.
	(stale match data): Test for preserve-on-failure behavior.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-04-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-risk-infloops):
	New variable.
